<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tweet Random Words</string>
    <string name="login_label">Log in</string>
    <string name="oauth_host">tweetsimonc312</string>
    <string name="logout">Log out</string>
    <string name="fullname">Full Name</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="timeline">Timeline</string>
    <string name="error">Sorry unable to load tweets</string>
    <string name="your_tweets">Your Tweets</string>
    <string name="compose_tweet">Compose Tweet</string>
    <string name="update_status_hint">So what\'s good?</string>
    <string name="tweet">Tweet</string>
    <string name="update_status_success">Tweet Delivered!</string>
    <string name="update_status_error">Tweet was lost in the digital abyss..</string>
    <string name="item_transition">itemTransition</string>
    <string name="default_text_count">0/140</string>
    <string name="login_progress">Logging in</string>
    <string name="on_login_success_toast">Welcome</string>
    <string name="oauth_failure_toast">Authentication was not successful. New login required.</string>
    <string name="logout_error_toast">Unable to log out. Please check if network is available and try again.</string>

</resources>